# stable-asset

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  custom-types.json
.github/workflows/: test.yml
client/: README.md  index.js  package.json
demo/: Cargo.toml  README.md  custom-types.json
demo/client/: README.md  index.js  package.json
demo/node/: Cargo.toml
demo/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
demo/pallets/: stable-asset  stable-asset-xcm
demo/runtime/: Cargo.toml
demo/runtime/src/: lib.rs
demo/runtime/src/benchmarking/: mod.rs  nutsfinance_stable_asset.rs  utils.rs
demo/runtime/src/weights/: nutsfinance_stable_asset.rs
demo/scripts/: benchmark.sh  init.sh
demo/templates/: runtime-weight-template.hbs
lib/stable-asset/: Cargo.toml  README.md
lib/stable-asset-xcm/: Cargo.toml  README.md
lib/stable-asset-xcm/src/: lib.rs  mock.rs  tests.rs  weights.rs
lib/stable-asset/src/: lib.rs  mock.rs  tests.rs  weights.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/stable-asset/: Cargo.toml  README.md
pallets/stable-asset/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
