[workspace]
members = [
	"lib/stable-asset",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false }

frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
sp-std = { version = "12.0.0", default-features = false }
sp-runtime = { version = "28.0.0", default-features = false }
sp-io = { version = "27.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }
