[workspace]
members = [
	"lib/stable-asset",
]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[workspace.dependencies]
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", default-features = false }

frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "34.0.0", default-features = false }
sp-io = { version = "33.0.0", default-features = false }
pallet-balances = { version = "31.0.0", default-features = false }
