[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime',
]
resolver = "2"

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-executive = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-support = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-system = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
max-encoded-len = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
max-encoded-len-derive = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-aura = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-babe = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-balances = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-collective = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-identity = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-indices = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-membership = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-nicks = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-offences = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-session = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-society = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-staking = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-tips = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-utility = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
remote-externalities = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-cli = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-client-api = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-client-db = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-executor = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-informant = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-keystore = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-network = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-offchain = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-service = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-tracing = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-api = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-consensus = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-consensus-vrf = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-core = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-externalities = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-finality-grandpa = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-inherents = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-io = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-keystore = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-offchain = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-rpc = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-runtime = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-serializer = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-session = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-staking = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-std = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-storage = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-tracing = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-trie = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-utils = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-version = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-gilt = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sc-consensus-uncles = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
sp-authorship = { git = "https://github.com/paritytech//substrate", rev = "57346f6b24875f8935280dba51fa8ab0a9ba1e39" }
